feat: Add new case studies with images, implement contact form API, and enhance UI with page transitions and a case study preview component.

--- a/content/cases/legal-firm-automation.mdx
+++ b/content/cases/legal-firm-automation.mdx
@@ -4,6 +4,7 @@ industry: "Legal Tech"
 stat: "-85%"
 statLabel: "Tempo Analisi Contratti"
 summary: "Come abbiamo ridotto da 4 ore a 30 minuti l'analisi preliminare dei contratti M&A per uno studio legale internazionale."
+image: "/images/legal_automation.png"
 ---
 
 ## Il Problema
